# hw_db_postgresql

./: config.ini  pyproject.toml
alembic/: env.py
alembic/versions/: a3b6af987eed_init.py
conf/: connect_db.py  models.py
seeds/: init.py  my_select.py
