[tool.poetry]
name = "db-2-postgresql"
version = "0.1.0"
description = ""
authors = ["serhiikhkr <05hello.world11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
faker = "^19.13.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
